# rp2040-eeprom-emulator

./: .gitignore  CMakeLists.txt  README.md  main.c  pin_definitions.h  rom.h
